tests/baselines/reference/minimal_relative(allowimportingtsextensions=true,noemit=false).errors.txt
error TS5056: Cannot write file 'dist/c.js' because it would be overwritten by multiple input files.
error TS5096: Option 'allowImportingTsExtensions' can only be used when 'moduleResolution' is set to 'minimal' and either 'noEmit' or 'emitDeclarationOnly' is set.
error TS6231: Could not resolve the path '/project/e' with the extensions: '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.
  The file is in the program because:
    Root file specified for compilation
error TS6504: File '/project/b.js' is a JavaScript file. Did you mean to enable the 'allowJs' option?
  The file is in the program because:
    Root file specified for compilation
/project/main.ts(1,16): error TS2307: Cannot find module './a' or its corresponding type declarations.
/project/main.ts(5,16): error TS2307: Cannot find module './b' or its corresponding type declarations.
/project/main.ts(8,16): error TS2846: A declaration file cannot be imported without 'import type'. Did you mean to import an implementation file './b.js' instead?
/project/main.ts(12,16): error TS6142: Module './c.tsx' was resolved to '/project/c.tsx', but '--jsx' is not set.
/project/main.ts(14,16): error TS2307: Cannot find module './d' or its corresponding type declarations.
/project/main.ts(15,16): error TS2307: Cannot find module './d/index' or its corresponding type declarations.
/project/main.ts(18,16): error TS2307: Cannot find module './e' or its corresponding type declarations.
/project/types.d.ts(2,16): error TS2691: An import path cannot end with a '.d.ts' extension. Consider importing './a.js' instead.
/project/types.d.ts(3,21): error TS2691: An import path cannot end with a '.d.ts' extension. Consider importing './a.js' instead.


!!! error TS5056: Cannot write file 'dist/c.js' because it would be overwritten by multiple input files.
!!! error TS5096: Option 'allowImportingTsExtensions' can only be used when 'moduleResolution' is set to 'minimal' and either 'noEmit' or 'emitDeclarationOnly' is set.
!!! error TS6231: Could not resolve the path '/project/e' with the extensions: '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.
!!! error TS6231:   The file is in the program because:
!!! error TS6231:     Root file specified for compilation
!!! error TS6504: File '/project/b.js' is a JavaScript file. Did you mean to enable the 'allowJs' option?
!!! error TS6504:   The file is in the program because:
!!! error TS6504:     Root file specified for compilation
==== /project/a.ts (0 errors) ====
    export {};
    
==== /project/b.ts (0 errors) ====
    export {};
    
==== /project/b.js (0 errors) ====
    export {};
    
==== /project/b.d.ts (0 errors) ====
    export {};
    
==== /project/c.ts (0 errors) ====
    export {};
    
==== /project/c.tsx (0 errors) ====
    export {};
    
==== /project/d/index.ts (0 errors) ====
    export {};
    
==== /project/e (0 errors) ====
    export {};
    
==== /project/main.ts (7 errors) ====
    import {} from "./a";
                   ~~~~~
!!! error TS2307: Cannot find module './a' or its corresponding type declarations.
    import {} from "./a.js";
    import {} from "./a.ts";
    
    import {} from "./b";
                   ~~~~~
!!! error TS2307: Cannot find module './b' or its corresponding type declarations.
    import {} from "./b.js";
    import {} from "./b.ts";
    import {} from "./b.d.ts";
                   ~~~~~~~~~~
!!! error TS2846: A declaration file cannot be imported without 'import type'. Did you mean to import an implementation file './b.js' instead?
    import type {} from "./b.d.ts";
    
    import {} from "./c.ts";
    import {} from "./c.tsx";
                   ~~~~~~~~~
!!! error TS6142: Module './c.tsx' was resolved to '/project/c.tsx', but '--jsx' is not set.
    
    import {} from "./d";
                   ~~~~~
!!! error TS2307: Cannot find module './d' or its corresponding type declarations.
    import {} from "./d/index";
                   ~~~~~~~~~~~
!!! error TS2307: Cannot find module './d/index' or its corresponding type declarations.
    import {} from "./d/index.ts";
    
    import {} from "./e";
                   ~~~~~
!!! error TS2307: Cannot find module './e' or its corresponding type declarations.
    
==== /project/types.d.ts (2 errors) ====
    import {} from "./a.ts";
    import {} from "./a.d.ts";
                   ~~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.d.ts' extension. Consider importing './a.js' instead.
    import type {} from "./a.d.ts";
                        ~~~~~~~~~~
!!! error TS2691: An import path cannot end with a '.d.ts' extension. Consider importing './a.js' instead.
    